fix: redesign sticky note to prevent delete note popup overflow

--- a/src/components/StickyNotes/SingleNote/style.css
+++ b/src/components/StickyNotes/SingleNote/style.css
@@ -75,6 +75,9 @@
 .sticky-note .note-content {
 	z-index: 2;
 	width: 100%;
+	position: relative;
+	height: 100%;
+	overflow: hidden;
 }
 
 .sticky-note-header {
